--- a/app.html
+++ b/app.html
@@ -32,7 +32,7 @@
 
         var criaMosquito = setInterval(function() {
             posicaoRandomica()
-        }, 3000)
+        }, criaMosquitoTempo)
         
     </script>
 
