--- a/vitoria.html
+++ b/vitoria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Over</title>
+    <title>Vitória</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-center">
-                    <img src="imagens/game_over.png" alt="game_over">
+                    <img src="imagens/vitoria.png" alt="vitoria">
                 </div>
             </div>
         </div>
